2005-07-10  Casey Marshall  <csm@gnu.org>

	* gnu/classpath/debug/Component.java: new file.
	* gnu/classpath/debug/PreciseFilter.java: new file.
	* gnu/classpath/debug/SystemLogger.java: new file.
	* gnu/java/security/x509/X509Certificate.java
	(DEBUG, debug, debug): removed.
	(logger): new constant; use 'logger' with 'Component.X509'
	for debug messages throughout.
	(parse): always read the next DER value after reading the
	version-specific values.

2005-07-10  Dalibor Topic  <robilad@kaffe.org>

        * java/io/ObjectOutputStream.java: Updated copyright 
	information for 2005.

2005-07-10  Dalibor Topic  <robilad@kaffe.org>

        * java/io/ObjectOutputStream.java
        (getObjectField): Clarified error checking code, and
        improved exception messages.

2005-07-10  Dalibor Topic  <robilad@kaffe.org>

        * java/io/ObjectOutputStream.java (DEBUG): New constant.
        (ObjectOutputStream, writeObject) Use internal debug switch.

2005-07-10  Dalibor Topic  <robilad@kaffe.org>

	* java/io/ObjectInputStream.java (DEBUG): 
	New private static field.
	(ObjectInputStream, resolveClass) Use DEBUG.

2005-07-10  Dalibor Topic  <robilad@kaffe.org>

        * java/awt/GridBagLayout.java:
        (addLayoutComponent) Improved error message.

2005-07-10  Dalibor Topic  <robilad@kaffe.org>

	* gnu/java/text/FormatCharacterIterator.java:
	Removed unnecessary import of gnu.classpath.Configuration.
	(DEBUG) New private static field.
	(debug, dumpTable) Use DEBUG.

2005-07-09  Chris Burdess  <dog@gnu.org>

	* gnu/xml/transform/AbstractNumberNode.java,
	gnu/xml/transform/ApplyImportsNode.java,
	gnu/xml/transform/ApplyTemplatesNode.java,
	gnu/xml/transform/AttributeNode.java,
	gnu/xml/transform/Bindings.java,
	gnu/xml/transform/CallTemplateNode.java,
	gnu/xml/transform/CopyOfNode.java,
	gnu/xml/transform/CurrentFunction.java,
	gnu/xml/transform/DocumentFunction.java,
	gnu/xml/transform/ElementAvailableFunction.java,
	gnu/xml/transform/ElementNode.java,