@@ -174,7 +174,8 @@ if test "x${COMPILE_JNI}" = xyes; then
 		    inttypes.h stdint.h utime.h sys/utime.h sys/filio.h \
 		    sys/time.h \
 		    sys/select.h \
-		    crt_externs.h])
+		    crt_externs.h \
+                    fcntl.h])
 
   AC_EGREP_HEADER(uint32_t, stdint.h, AC_DEFINE(HAVE_INT32_DEFINED, 1, [Define to 1 if you have uint32_t]))
   AC_EGREP_HEADER(uint32_t, inttypes.h, AC_DEFINE(HAVE_INT32_DEFINED, 1, [Define to 1 if you have uint32_t]))
@@ -187,7 +188,8 @@ if test "x${COMPILE_JNI}" = xyes; then
 		  getsockname getpeername bind listen accept \
 		  recvfrom send sendto setsockopt getsockopt time mktime \
 		  localtime_r \
-		  strerror_r])
+		  strerror_r \
+                  fcntl])
 
   AC_HEADER_TIME
   AC_STRUCT_TM
